Fix code format